--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="icon" type="image/ico" href="img/GJ_icon_XS.png" />
     <title>GJ | Front End Developer</title>
 </head>
 <body>
+    <div id="scroll">
+        <div id="line-wrap">
+            <div id="scroll-line"></div>
+        </div>
+        <p>Scroll<br />(or don't,<br />I'm not your boss)</p>
+    </div>
     <div id="background">
         <div id="gradient"></div>
         <div id="zig-zag"></div>
@@ -14,11 +21,13 @@
         before entering.</p>
         </div>
         <div id="diamonds-wrap">
+            <div class="diamond"></div>
             <div class="diamond" id="center-diamond"></div>
             <div class="diamond mini" id="left-diamond"></div>
             <div class="diamond mini" id="right-diamond"></div>
         </div>
     </div>
+    <section></section>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
