--- a/index.html
+++ b/index.html
@@ -17,17 +17,71 @@
         <div id="gradient"></div>
         <div id="zig-zag"></div>
         <div id="welcome">
-            <p>Welcome to my world!<br />Please take off your <span>shoes</span><br />
+            <p>Welcome to my world!<br />Please take off your <span id="flash">shoes</span><br />
         before entering.</p>
         </div>
+    </div>
+    <section id="bio">
         <div id="diamonds-wrap">
             <div class="diamond"></div>
             <div class="diamond" id="center-diamond"></div>
             <div class="diamond mini" id="left-diamond"></div>
             <div class="diamond mini" id="right-diamond"></div>
         </div>
-    </div>
-    <section></section>
+        <div id="bio-wrap">
+            <h1>What is a <span id="flash">GJay?</span></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices in iaculis nunc sed augue lacus. Felis eget nunc lobortis mattis. Lorem donec massa sapien faucibus et. Tortor at auctor urna nunc id cursus. Purus gravida quis blandit turpis. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Eu lobortis elementum nibh tellus molestie. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Elit eget gravida cum sociis natoque penatibus et magnis. A condimentum vitae sapien pellentesque. Purus viverra accumsan in nisl nisi. Lectus mauris ultrices eros in cursus turpis massa. Sed arcu non odio euismod lacinia at quis risus. Amet commodo nulla facilisi nullam. Ultrices dui sapien eget mi proin sed libero enim. Cursus in hac habitasse platea dictumst.</p>
+        </div>
+    </section>
+    <section id="portfolio">
+        <h1>GJay's Works</h1>
+        <div id="zig-zag"></div>
+        <div id="zig-zag-background"></div>
+        <div id="diamond-wrapper">
+            <ul class="grid">
+                <li>
+                    <div class="show show1"></div>
+                    <div class="description">
+                        <p><span>Wireframes</span><br />
+                            Some of my website ideas,<br />
+                            developed or not.
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="show show2"></div>
+                    <div class="description">
+                        <p><span>Icons</span><br />
+                            Small Icons I've made<br />
+                            through Sketch app.
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="show show3"></div>
+                    <div class="description">
+                        <p><span>Doodles</span><br />
+                            Everything<br />
+                            and anything else.
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="show show4"></div>
+                    <div class="description">
+                        <p><span>Photoshop</span><br />
+                            Picture adjustments<br />
+                            and animations.
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section id="contact">
+        <h1>Now I want more!</h1>
+        <p>I will gladly have a chat with you over your preferred means of communication!</p>
+    </section>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
