-Added contact section -Added footer -Made some adjustments

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="icon" type="image/ico" href="img/GJ_icon_XS.png" />
-    <title>GJ | Front End Developer</title>
+    <link rel="icon" type="image/ico" href="img/icons/GJ_icon_XS.png" />
+    <title>GJ | Web Designer</title>
 </head>
 <body>
     <div id="scroll">
@@ -17,7 +17,7 @@
         <div id="gradient"></div>
         <div id="zig-zag"></div>
         <div id="welcome">
-            <p>Welcome to my world!<br />Please take off your <span id="flash">shoes</span><br />
+            <p>Welcome to <span id="flash">GJay's</span> world!<br />Please take off your shoes<br />
         before entering.</p>
         </div>
     </div>
@@ -27,14 +27,15 @@
             <div class="diamond" id="center-diamond"></div>
             <div class="diamond mini" id="left-diamond"></div>
             <div class="diamond mini" id="right-diamond"></div>
+            <p>You scrolled! <br /> Yay!</p>
         </div>
         <div id="bio-wrap">
-            <h1>What is a <span id="flash">GJay?</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices in iaculis nunc sed augue lacus. Felis eget nunc lobortis mattis. Lorem donec massa sapien faucibus et. Tortor at auctor urna nunc id cursus. Purus gravida quis blandit turpis. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Eu lobortis elementum nibh tellus molestie. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Elit eget gravida cum sociis natoque penatibus et magnis. A condimentum vitae sapien pellentesque. Purus viverra accumsan in nisl nisi. Lectus mauris ultrices eros in cursus turpis massa. Sed arcu non odio euismod lacinia at quis risus. Amet commodo nulla facilisi nullam. Ultrices dui sapien eget mi proin sed libero enim. Cursus in hac habitasse platea dictumst.</p>
+            <h1>What is a <span id="flash">GJay</span>?</h1>
+            <p>/d&#658;i&#720;-d&#658;e&#618;/ <br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices in iaculis nunc sed augue lacus. Felis eget nunc lobortis mattis. Lorem donec massa sapien faucibus et. Tortor at auctor urna nunc id cursus. Purus gravida quis blandit turpis. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Eu lobortis elementum nibh tellus molestie. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Elit eget gravida cum sociis natoque penatibus et magnis. A condimentum vitae sapien pellentesque. Purus viverra accumsan in nisl nisi. Lectus mauris ultrices eros in cursus turpis massa. Sed arcu non odio euismod lacinia at quis risus. Amet commodo nulla facilisi nullam. Ultrices dui sapien eget mi proin sed libero enim. Cursus in hac habitasse platea dictumst.</p>
         </div>
     </section>
     <section id="portfolio">
-        <h1>GJay's Works</h1>
+        <h1>What does a <span id="flash">GJay</span> Do?</h1>
         <div id="zig-zag"></div>
         <div id="zig-zag-background"></div>
         <div id="diamond-wrapper">
@@ -78,11 +79,53 @@
             </ul>
         </div>
     </section>
+    <section id="content-loader">
+    </section>
     <section id="contact">
         <h1>Now I want more!</h1>
-        <p>I will gladly have a chat with you over your preferred means of communication!</p>
+        <p>You can find the GJay pretty much anywhere, choose your favourite tool.</p>
+        <div id="socials">
+            <div class="icon">
+                <a href="mailto:jessica.granziera@gmail.com?Subject=Hello%20Jessica" target="_top"><img src="img/icons/mail.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="https://www.facebook.com/jessica.granziera.5" target="_blank"><img src="img/icons/facebook.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="https://github.com/Thetawaves" target="_blank"><img src="img/icons/github.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="https://www.instagram.com/rugiada117/" target="_blank"><img src="img/icons/instagram.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="https://twitter.com/Thetawaves3006" target="_blank"><img src="img/icons/twitter.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="https://www.linkedin.com/in/jessicagranziera/" target="_blank"><img src="img/icons/linkedin.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="tel:+447592334483"><img src="img/icons/telephone.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="https://plus.google.com/107805679060384864676" target="_blank"><img src="img/icons/google+.png" /></a>
+            </div>
+            <div class="icon">
+                <a href="skype:rugiada117?call"><img src="img/icons/skype.png" /></a>
+            </div>
+        </div>
     </section>
-    
+    <footer>
+        <div id="stripe">
+            <p>< / > with&nbsp;</p>
+            <div>
+                <img src="img/icons/Brain.png" />
+            </div>
+            <p>&nbsp;(both emispheres) by&nbsp;</p>
+            <div>
+                <img src="img/icons/GJ_icon_S.png" />
+            </div>
+        </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
